# af-signatures

./: .gitignore  README.md  pyproject.toml
2026-01-11/: detect.py  generate_signature.py  visualize_signature.py
2026-01-11/visualizations/: evaluation_results.json
bids/: __init__.py  cli.py  engine.py  extractor.py  runner.py  store.py  trainer.py  types.py
bids/tests/: __init__.py  test_runner.py  test_store.py  test_types.py
docs/: PRD-behavioral-ids.md  SDD-behavioral-ids.md
