[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bids"
version = "0.1.0"
description = "Behavioral Intrusion Detection System for LLMs - Alignment Faking Detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vincent / Claude"},
]
keywords = ["llm", "alignment", "safety", "detection", "sae", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
full = [
    "transformer-lens>=1.0.0",
    "sae-lens>=0.1.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bids = "bids.cli:main"

[project.urls]
Homepage = "https://github.com/bigsnarfdude/af-signatures"
Documentation = "https://github.com/bigsnarfdude/af-signatures/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["bids*"]

[tool.pytest.ini_options]
testpaths = ["bids/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
